<resources>
    <string name="app_name">EpicureanElegance</string>
    <string name="app_name_under_logo">EpicureanElegance</string>
    <string name="app_slogan">Delight in Every Bite, Delivered Right!</string>
    <string name="design_by">Design By\nBHABANI</string>
    <string name="contentDescription">logo_main</string>
    <string name="get_start_screen_text"> Get Started </string>
    <string name="get_start_screen_desc">Epicurean Elegance brings you a symphony of exquisite flavors, curated with the utmost care to elevate your dining experience to unparalleled heights.</string>
    <string name="log_text">LogIn To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="continue_with">Continue With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login">LogIn</string>
    <string name="don_t_have_a_account">Don\'t Have A Account?</string>
    <string name="register_here">Register Here</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="already_have_a_account_login">Already have a account?LogIn</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="choose_loc_desc">\t\t\tTo provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food!</string>
    <string name="imageview_notification">ImageView_Notification</string>
    <string name="popular_foods">Popular Foods</string>
    <string name="view_more">View More</string>
    <string name="foodname">FoodName</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="img">img</string>
    <string name="_5">$5</string>
    <string name="img1">Img</string>
    <string name="price">price_food</string>
    <string name="img2">img2</string>
    <string name="_1">1</string>
    <string name="cart_fragment">Cart</string>
    <string name="Proceed">Proceed</string>
    <string name="search_query">What do you want to order?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="previously_buy">Previously Buy</string>
    <string name="food_name">Food Name</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="buy_again">Buy Again</string>
    <string name="address">Address</string>
    <string name="myname">Bhabani Shankar Rath</string>
    <string name="Address">House no: 006, Route No: 15H , c/o: Minaketan Rath , Bhabani Shankar Rath , Near Shanti Kalyan Mandap , Pallahat , Khordha , Pin: 752056</string>
    <string name="my_mail">bhabanishankarr21+android-devlopement@gmail.com</string>
    <string name="mynumber">+91 7735449565</string>
    <string name="contact_no">Contact No:</string>
    <string name="save_information">Save Information</string>
    <string name="notification">Notification</string>
</resources>