<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_User"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="164dp"
        android:layout_height="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_p_n_g" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/Base_Theme"
        android:textSize="35sp"
        android:fontFamily="@font/yeon_sung"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:textColor="@color/Base_Theme"
        android:textSize="18sp"
        android:fontFamily="@font/yeon_sung"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />
    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:textColor="@color/Base_Theme"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeon_sung"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/edittext_register"
        android:layout_width="352dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/user_plus"
        android:drawablePadding="15dp"
        android:elevation="35dp"
        android:fontFamily="@font/yeon_sung"
        android:hint="@string/name"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/edittext_register1"
        android:layout_width="352dp"
        android:layout_height="57dp"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15dp"
        android:paddingStart="15dp"
        android:background="@drawable/edittext_bg"
        android:elevation="35dp"
        android:fontFamily="@font/yeon_sung"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_register"
        app:layout_constraintStart_toStartOf="@+id/edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/edittext_register"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/edittext_register2"
        android:layout_width="352dp"
        android:layout_height="57dp"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:paddingStart="15dp"
        android:background="@drawable/edittext_bg"
        android:elevation="35dp"
        android:fontFamily="@font/yeon_sung"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_register1"
        app:layout_constraintStart_toStartOf="@+id/edittext_register1"
        app:layout_constraintTop_toBottomOf="@+id/edittext_register1"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/textView_or_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textStyle="bold"
        android:fontFamily="@font/yeon_sung"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_register2"
        app:layout_constraintStart_toStartOf="@+id/edittext_register2"
        app:layout_constraintTop_toBottomOf="@+id/edittext_register2"/>
    <TextView
        android:id="@+id/textView_Continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_with"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="@font/yeon_sung"
        app:layout_constraintEnd_toEndOf="@+id/textView_or_1"
        app:layout_constraintStart_toStartOf="@+id/textView_or_1"
        app:layout_constraintTop_toBottomOf="@+id/textView_or_1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/facebook"
        android:drawablePadding="15dp"
        android:elevation="25dp"
        android:fontFamily="@font/yeon_sung"
        android:paddingStart="15dp"
        android:text="@string/facebook"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView_Continue"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/google"
        android:elevation="25dp"
        android:fontFamily="@font/yeon_sung"
        android:paddingStart="15dp"
        android:text="@string/google"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView_Continue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Continue"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/red_button_gradient"
        android:fontFamily="@font/yeon_sung"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />
    <TextView
        android:id="@+id/textView_log_redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_a_account_login"
        android:fontFamily="@font/yeon_sung"
        android:textColor="@color/Base_Theme"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />
</androidx.constraintlayout.widget.ConstraintLayout>