<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView_splash_screen_logo"
        android:layout_width="253dp"
        android:layout_height="205dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_p_n_g"
        android:contentDescription="@string/contentDescription" />

    <TextView
        android:id="@+id/textView_logo_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/app_name_under_logo"
        android:textSize="40sp"
        android:textColor="@color/Base_Theme"
        app:layout_constraintEnd_toEndOf="@+id/imageView_splash_screen_logo"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/imageView_splash_screen_logo"
        app:layout_constraintTop_toBottomOf="@+id/imageView_splash_screen_logo" />

    <TextView
        android:id="@+id/textView_logo_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_slogan"
        android:textSize="18sp"
        android:fontFamily="@font/yeon_sung"
        android:textColor="@color/Base_Theme"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView_logo_1"
        app:layout_constraintStart_toStartOf="@+id/textView_logo_1"
        app:layout_constraintTop_toBottomOf="@+id/textView_logo_1" />

    <TextView
        android:id="@+id/textView_declare_Designedby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/design_by"
        android:fontFamily="@font/yeon_sung"
        android:textColor="@color/Base_Theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>