<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="330dp"
        android:layout_height="87dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/foodImageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/img"
                android:scaleType="centerCrop"
                android:src="@drawable/tiramisu_souffle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.478" />

            <TextView
                android:id="@+id/foodName"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/yeon_sung"
                android:gravity="center"
                android:text="@string/foodname"
                android:textColor="@color/Base_Theme"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/foodImageView"
                app:layout_constraintEnd_toStartOf="@+id/foodPrice"
                app:layout_constraintHorizontal_bias="0.017"
                app:layout_constraintStart_toEndOf="@+id/foodImageView"
                app:layout_constraintTop_toTopOf="@+id/foodImageView"
                app:layout_constraintVertical_bias="0.482" />

            <TextView
                android:id="@+id/foodPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/yeon_sung"
                android:gravity="center"
                android:text="@string/_5"
                android:textColor="@color/Base_Theme"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="75dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/addtocartshape"
                android:fontFamily="@font/yeon_sung"
                android:gravity="center"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/foodPrice"
                app:layout_constraintStart_toStartOf="@+id/foodPrice"
                app:layout_constraintTop_toBottomOf="@+id/foodPrice" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>